Movistar/04-networking/back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reto-movistar-back
  labels:
    app.kubernetes.io/name: reto-movistar
    app.kubernetes.io/component: back
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: reto-movistar
    app.kubernetes.io/component: back
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
