Movistar/04-networking/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reto-movistar-front
  labels:
    app.kubernetes.io/name: reto-movistar
    app.kubernetes.io/component: front
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: reto-movistar
    app.kubernetes.io/component: front
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
