Movistar/04-networking/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reto-movistar
  labels:
    app.kubernetes.io/name: reto-movistar
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: reto-movistar
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
