Movistar/04-networking/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: reto-movistar
  labels:
    app.kubernetes.io/name: reto-movistar
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host(`reto-movistar.ikigais.app`)
      priority: 100
      services:
        - name: reto-movistar
          port: 8080
